Nettoyage et ajout des modifications